--- a/index.html
+++ b/index.html
@@ -64,10 +64,39 @@
         </div>
         <div class="wrapper main-content">
             <div class="main-content">
-                <div class="projects"></div>
+                <h3 class="header-proj" >Your Projects</h3>
+                <div class="projects">
+                    <div class="proj-1">
+                        <p>Project 1</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium placeat nulla quasi, similique iure fuga earum repudiandae animi minima fugit.</p>
+                    </div>
+                    <div class="proj-2">
+                        <p>Project 2</p>
+                        <p>Nisi, ad. Sunt fugiat consequuntur necessitatibus esse cumque ipsa totam, tenetur suscipit dolorem commodi ducimus aut voluptatum animi, quasi reprehenderit.</p>
+                    </div>
+                    <div class="proj-3">
+                        <p>Project 3</p>
+                        <p>Atque qui praesentium ipsa sint? Veritatis est aut dignissimos ab, distinctio nam laudantium laboriosam quaerat enim facilis voluptatum molestias fugit!</p>
+                    </div>
+                    <div class="proj-4">
+                        <p>Project 4</p>
+                        <p>Praesentium dolore corporis eaque unde nesciunt eveniet harum nihil alias debitis eum officia, quis optio reprehenderit ullam. Autem, aspernatur sunt!</p>
+                    </div>
+                    <div class="proj-5">
+                        <p>Project 5</p>
+                        <p>Aliquid ab minus laudantium nisi vero praesentium, ipsa expedita omnis illo quis vitae dolores est placeat at fuga doloremque earum!</p>
+                    </div>
+                    <div class="proj-6">
+                        <p>Project 6</p>
+                        <p>Nisi quidem nihil commodi, molestias optio est consequatur animi perferendis aut ab neque, ratione, dolor necessitatibus ipsam reprehenderit natus velit!</p>
+                    </div>
+                </div>
+                <h3 class="header-announce" >Announcements</h3>
                 <div class="announcements"></div>
+                <h3 class="header-trending ">Trending</h3>
                 <div class="trending"></div>
             </div>
+            
         </div>
     </div>
 </body>
