--- a/index.html
+++ b/index.html
@@ -143,7 +143,22 @@
                     </div>
                 </div>
                 <h3 class="header-announce" >Announcements</h3>
-                <div class="announcements"></div>
+                <div class="wrapper anouncements">
+                    <div class="announcements">
+                        <div class="announcement-card">
+                            <p>Announcement 1</p>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium placeat nulla quasi, similique iure fuga earum repudiandae animi minima fugit.</p>
+                        </div>
+                        <div class="announcement-card">
+                            <p>Announcement 2</p>
+                            <p>Nisi, ad. Sunt fugiat consequuntur necessitatibus esse cumque ipsa totam, tenetur suscipit dolorem commodi ducimus aut voluptatum animi, quasi reprehenderit.</p>
+                        </div>
+                        <div class="announcement-card">
+                            <p>Announcement 3</p>
+                            <p>Atque qui praesentium ipsa sint? Veritatis est aut dignissimos ab, distinctio nam laudantium laboriosam quaerat enim facilis voluptatum molestias fugit!</p>
+                        </div>
+                    </div>
+                </div>
                 <h3 class="header-trending ">Trending</h3>
                 <div class="trending"></div>
             </div>
