finished with nav-bar and user-header

--- a/index.html
+++ b/index.html
@@ -10,18 +10,20 @@
     <div class="dashboard-container">
         <div class="wrapper nav">
             <div class="nav">
-                <div class="search-icon">icon</div>
-                <div class="search-bar">
-                    <input type="search" id="search" name="search" placeholder="search">
-                </div>
-                <div class="notifications-icon">icon</div>
-                <div class="user-avatar">avatar</div>
-                <div class="user-name">user-name</div>
+                <img src="icons/magnify.svg" class="search-icon">
+                <input type="search" id="search" name="search">
+                <img src="icons/bell-ring-outline.svg" class="notifications-icon">
+                <img src="icons/63586679.png" class="user-avatar">
+                <div class="user-name">Morgan Freeman</div>
             </div>
         </div>
         <div class="wrapper header">
             <div class="header">
-                <div class="user-header"></div>
+                <div class="user-header">
+                    <img src="icons/63586679.png" class="user-avatar">
+                    <p>Hi there,</p>
+                    <div class="user-name">Morgan Freeman(@morgan)</div>
+                </div>
                 <button class="new">New</button>
                 <button class="upload">Upload</button>
                 <button class="share">Share</button>
@@ -143,7 +145,7 @@
                     </div>
                 </div>
                 <h3 class="header-announce" >Announcements</h3>
-                <div class="wrapper anouncements">
+                <div class="wrapper-announcements">
                     <div class="announcements">
                         <div class="announcement-card">
                             <p>Announcement 1</p>
