Finished with trending layout + added some sparkle to anything pressable

--- a/index.html
+++ b/index.html
@@ -162,7 +162,30 @@
                     </div>
                 </div>
                 <h3 class="header-trending ">Trending</h3>
-                <div class="trending"></div>
+                <div class="trending">
+                    <div class="wrapper-trending">
+                        <div class="user-trending">
+                            <img src="icons/dick-svgrepo-com.svg" class="user-avatar">
+                            <div class="user-name">Lily Thompson (@lily)</div>
+                            <div class="user-title">Art-Tech Pioneer</div>
+                        </div>
+                        <div class="user-trending">
+                            <img src="icons/knight-svgrepo-com.svg" class="user-avatar">
+                         <div class="user-name">James Rodriguez (@james)</div>
+                         <div class="user-title">Boundless Adventurer: Fearless</div>
+                        </div>
+                        <div class="user-trending">
+                            <img src="icons/literary-uncle-svgrepo-com.svg" class="user-avatar">
+                            <div class="user-name">Ethan Walker (@ethan)</div>
+                            <div class="user-title">Science Explorer: Rising</div>
+                        </div>
+                        <div class="user-trending">
+                            <img src="icons/thief-svgrepo-com.svg" class="user-avatar">
+                            <div class="user-name">Sofia Patel (@sofia)</div>
+                            <div class="user-title">Green Crusader: Eco-Champ</div>
+                        </div>
+                    </div>
+                </div>
             </div>
             
         </div>
